@@ -1,1 +1,7 @@
 """FormController tests package."""
+
+from Products.PloneTestCase import PloneTestCase
+PloneTestCase.setupPloneSite()
+
+class CMFFormControllerTestCase(PloneTestCase.PloneTestCase):
+    pass
