@@ -2,6 +2,11 @@ Changelog for CMFFormController
 
     (name of developer listed in brackets)
 
+CMFFormController 2.0.8 - Unreleased
+
+    - Added optional POST only protection to form validation.
+    [alecm]
+
 CMFFormController 2.0.7 - Released January 27, 2006
 
     - Fixed the combineArgs method of BaseFormAction to decode Unicode values
